--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,8 +1,7 @@
 status = error
 name = PropertiesConfig
 
-property.filename = \
-  D:/java/jv_spring_intro/logs/log4j2-logs.log
+property.filename = D:/java/jv_spring_intro/logs/log4j2-logs.log
 
 filter.threshold.type = ThresholdFilter
 filter.threshold.level = info
